--- a/Logistics.UILayer/Logistics.UILayer.csproj
+++ b/Logistics.UILayer/Logistics.UILayer.csproj
@@ -134,6 +134,8 @@
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\NewCategoryController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
@@ -164,6 +166,12 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblCustomer.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TblMap.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TblMessage.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblOrder.cs">
@@ -334,6 +342,80 @@
     <Content Include="Templates\admin\adminweb\tabs.html" />
     <Content Include="Templates\admin\adminweb\validation.html" />
     <Content Include="Templates\admin\adminweb\w3layouts-License.txt" />
+    <Content Include="Templates\UI\web\contact.html" />
+    <Content Include="Templates\UI\web\css\bootstrap.css" />
+    <Content Include="Templates\UI\web\css\flexslider.css" />
+    <Content Include="Templates\UI\web\css\font-awesome.css" />
+    <Content Include="Templates\UI\web\css\lightbox.css" />
+    <Content Include="Templates\UI\web\css\style.css" />
+    <Content Include="Templates\UI\web\fonts\fontawesome-webfont.svg" />
+    <Content Include="Templates\UI\web\gallery.html" />
+    <Content Include="Templates\UI\web\icons.html" />
+    <Content Include="Templates\UI\web\images\angle.png" />
+    <Content Include="Templates\UI\web\images\arrow.png" />
+    <Content Include="Templates\UI\web\images\bg2.jpg" />
+    <Content Include="Templates\UI\web\images\bg3.jpg" />
+    <Content Include="Templates\UI\web\images\bg4.jpg" />
+    <Content Include="Templates\UI\web\images\bg5.jpg" />
+    <Content Include="Templates\UI\web\images\bg7.jpg" />
+    <Content Include="Templates\UI\web\images\bg8.jpg" />
+    <Content Include="Templates\UI\web\images\close.png" />
+    <Content Include="Templates\UI\web\images\dott.png" />
+    <Content Include="Templates\UI\web\images\flight1.jpg" />
+    <Content Include="Templates\UI\web\images\flight2.jpg" />
+    <Content Include="Templates\UI\web\images\flight3.jpg" />
+    <Content Include="Templates\UI\web\images\flight4.jpg" />
+    <Content Include="Templates\UI\web\images\flight5.jpg" />
+    <Content Include="Templates\UI\web\images\flight6.jpg" />
+    <Content Include="Templates\UI\web\images\g1.jpg" />
+    <Content Include="Templates\UI\web\images\g2.jpg" />
+    <Content Include="Templates\UI\web\images\g3.jpg" />
+    <Content Include="Templates\UI\web\images\g4.jpg" />
+    <Content Include="Templates\UI\web\images\g5.jpg" />
+    <Content Include="Templates\UI\web\images\g6.jpg" />
+    <Content Include="Templates\UI\web\images\g7.jpg" />
+    <Content Include="Templates\UI\web\images\left.png" />
+    <Content Include="Templates\UI\web\images\next.png" />
+    <Content Include="Templates\UI\web\images\p1.jpg" />
+    <Content Include="Templates\UI\web\images\p2.jpg" />
+    <Content Include="Templates\UI\web\images\p3.jpg" />
+    <Content Include="Templates\UI\web\images\play-button.png" />
+    <Content Include="Templates\UI\web\images\prev.png" />
+    <Content Include="Templates\UI\web\images\right.png" />
+    <Content Include="Templates\UI\web\images\ship1.jpg" />
+    <Content Include="Templates\UI\web\images\ship2.jpg" />
+    <Content Include="Templates\UI\web\images\ship3.jpg" />
+    <Content Include="Templates\UI\web\images\ship4.jpg" />
+    <Content Include="Templates\UI\web\images\ship5.jpg" />
+    <Content Include="Templates\UI\web\images\t1.jpg" />
+    <Content Include="Templates\UI\web\images\t2.jpg" />
+    <Content Include="Templates\UI\web\images\t3.jpg" />
+    <Content Include="Templates\UI\web\images\t4.jpg" />
+    <Content Include="Templates\UI\web\images\team1.jpg" />
+    <Content Include="Templates\UI\web\images\team2.jpg" />
+    <Content Include="Templates\UI\web\images\team3.jpg" />
+    <Content Include="Templates\UI\web\images\team4.jpg" />
+    <Content Include="Templates\UI\web\images\train1.jpg" />
+    <Content Include="Templates\UI\web\images\train2.jpg" />
+    <Content Include="Templates\UI\web\images\truck3.jpg" />
+    <Content Include="Templates\UI\web\images\truck4.jpg" />
+    <Content Include="Templates\UI\web\images\truck5.jpg" />
+    <Content Include="Templates\UI\web\index.html" />
+    <Content Include="Templates\UI\web\js\bootstrap.js" />
+    <Content Include="Templates\UI\web\js\counterup.min.js" />
+    <Content Include="Templates\UI\web\js\easing.js" />
+    <Content Include="Templates\UI\web\js\easyResponsiveTabs.js" />
+    <Content Include="Templates\UI\web\js\jquery-2.1.4.min.js" />
+    <Content Include="Templates\UI\web\js\jquery.flexslider.js" />
+    <Content Include="Templates\UI\web\js\lightbox-plus-jquery.min.js" />
+    <Content Include="Templates\UI\web\js\move-top.js" />
+    <Content Include="Templates\UI\web\js\responsiveslides.min.js" />
+    <Content Include="Templates\UI\web\js\simplePlayer.js" />
+    <Content Include="Templates\UI\web\js\SmoothScroll.min.js" />
+    <Content Include="Templates\UI\web\js\waypoints.min.js" />
+    <Content Include="Templates\UI\web\services.html" />
+    <Content Include="Templates\UI\web\typography.html" />
+    <Content Include="Templates\UI\web\w3layouts-License.txt" />
     <Content Include="Templates\web\css\style.css" />
     <Content Include="Templates\web\images\1.png" />
     <Content Include="Templates\web\images\clo.png" />
@@ -400,6 +482,18 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\UpdateProfile.cshtml" />
+    <Content Include="Views\Message\Inbox.cshtml" />
+    <Content Include="Views\Message\Outbox.cshtml" />
+    <Content Include="Views\Message\SendMessage.cshtml" />
+    <Content Include="Views\Message\MessageDetails.cshtml" />
+    <Content Include="Views\Map\Index.cshtml" />
+    <Content Include="Templates\UI\web\fonts\fontawesome-webfont.eot" />
+    <Content Include="Templates\UI\web\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Templates\UI\web\fonts\fontawesome-webfont.woff" />
+    <Content Include="Templates\UI\web\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Templates\UI\web\fonts\FontAwesome.otf" />
+    <Content Include="Templates\UI\web\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Templates\UI\web\fonts\glyphicons-halflings-regular.woff2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
